Fix content descriptions